fix(ui): make logo consistent, show elipses on text overflow in all project screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -1060,3 +1060,16 @@ body {
 .img_container .img-block img {
   height: 100%;
 }
+
+/*  all projecct.html */
+
+.allpabstract {
+  padding: 5px;
+  display: block;
+  display: -webkit-box;
+  max-width: 400px;
+  -webkit-line-clamp: 4; /* max line number */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
